chore(openapi): tighten types on server DTOs (#58)
* feat(server): set required properties on controller DTOs

* chore(server): update openapis

* chore(server): add gradle wrapper to server root dir
